# md2rm

./: .gitignore  LICENSE  README.md  md2rm.py
src/: CMakeLists.txt  main.cpp
testfiles/: test1.md  test1.rm  test2.md  test3.md  tt  tt.md  tt.rm
